--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/shuchenzhu/anaconda3/bin/python"
+    "python.pythonPath": "C:\\Users\\feisu\\anaconda3\\python.exe"
 }
