--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 .vscode/settings.json
 one_way_function/matrix_L_n4_r3
 one_way_function/n_10_random/matrix_S
+one_way_function/n10_t7_s4_r2_random/matrix_S
+one_way_function/n10_t8_s4_r1_random/matrix_S
