--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ one_way_function/n_10_random/matrix_S
 one_way_function/n10_t7_s4_r2_random/matrix_S
 one_way_function/n10_t8_s4_r1_random/matrix_S
 .vscode/settings.json
+.vscode/settings.json
