--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ one_way_function/n10_t7_s4_r2_random/matrix_S
 one_way_function/n10_t8_s4_r1_random/matrix_S
 .vscode/settings.json
 .vscode/settings.json
+one_way_function/n12_t_10_s3_r1/matrix_S
