--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ one_way_function/n10_t8_s4_r1_random/matrix_S
 .vscode/settings.json
 one_way_function/n12_t_10_s3_r1/matrix_S
 Y120_project/__pycache__/group_classifier.cpython-38.pyc
+Y120_project/D4/.ipynb_checkpoints/Untitled-checkpoint.ipynb
