--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ one_way_function/n12_t_10_s3_r1/matrix_S
 Y120_project/__pycache__/group_classifier.cpython-38.pyc
 Y120_project/D4/.ipynb_checkpoints/Untitled-checkpoint.ipynb
 .vscode/settings.json
+.vscode/settings.json
+one_way_function/n12_t_10_s3_r1/__pycache__/main.cpython-38.pyc
+.vscode/settings.json
+.vscode/settings.json
+.vscode/settings.json
