--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ one_way_function/n12_t_10_s3_r1/__pycache__/main.cpython-38.pyc
 .vscode/settings.json
 .vscode/settings.json
 .vscode/settings.json
+.vscode/settings.json
