--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ one_way_function/n12_t_10_s3_r1/__pycache__/main.cpython-38.pyc
 .vscode/settings.json
 .vscode/settings.json
 non_unitary/__pycache__/subroutines.cpython-311.pyc
+non_unitary/__pycache__/subroutines.cpython-312.pyc
