--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ one_way_function/n12_t_10_s3_r1/__pycache__/main.cpython-38.pyc
 .vscode/settings.json
 non_unitary/__pycache__/subroutines.cpython-311.pyc
 non_unitary/__pycache__/subroutines.cpython-312.pyc
+non_unitary/ancilla/__pycache__/ancillaSubroutines.cpython-311.pyc
