--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ one_way_function/n12_t_10_s3_r1/__pycache__/main.cpython-38.pyc
 non_unitary/__pycache__/subroutines.cpython-311.pyc
 non_unitary/__pycache__/subroutines.cpython-312.pyc
 non_unitary/ancilla/__pycache__/ancillaSubroutines.cpython-311.pyc
+non_unitary/ancilla/__pycache__/ancillaSubroutines.cpython-312.pyc
