--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ non_unitary/__pycache__/subroutines.cpython-311.pyc
 non_unitary/__pycache__/subroutines.cpython-312.pyc
 non_unitary/ancilla/__pycache__/ancillaSubroutines.cpython-311.pyc
 non_unitary/ancilla/__pycache__/ancillaSubroutines.cpython-312.pyc
+non_unitary/PXP/__pycache__/PXPsubroutines.cpython-311.pyc
