--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ non_unitary/__pycache__/subroutines.cpython-312.pyc
 non_unitary/ancilla/__pycache__/ancillaSubroutines.cpython-311.pyc
 non_unitary/ancilla/__pycache__/ancillaSubroutines.cpython-312.pyc
 non_unitary/PXP/__pycache__/PXPsubroutines.cpython-311.pyc
+non_unitary/PXP/__pycache__/PXPsubroutines.cpython-312.pyc
