--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ non_unitary/no-ancilla/__pycache__/subroutines.cpython-311.pyc
 non_unitary/false-vacuum/__pycache__/false_vacuum_subroutines.cpython-312.pyc
 non_unitary/no-ancilla/__pycache__/subroutines.cpython-312.pyc
 non_unitary/2D/__pycache__/two_d_subroutines.cpython-312.pyc
+non_unitary/2D/__pycache__/two_d_subroutines.cpython-311.pyc
