--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ non_unitary/2D/__pycache__/two_d_subroutines.cpython-312.pyc
 non_unitary/2D/__pycache__/two_d_subroutines.cpython-311.pyc
 non_unitary/false-vacuum/__pycache__/false_vacuum_subroutines.cpython-311.pyc
 
+LQCD/exact_synthesis/__pycache__/CR_class.cpython-312.pyc
