--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ non_unitary/false-vacuum/__pycache__/false_vacuum_subroutines.cpython-311.pyc
 LQCD/exact_synthesis/__pycache__/CR_class.cpython-312.pyc
 plot.pdf
 H_learning/__pycache__/RFE.cpython-311.pyc
+H_learning/__pycache__/RFE.cpython-312.pyc
