--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ LQCD/exact_synthesis/__pycache__/CR_class.cpython-312.pyc
 plot.pdf
 H_learning/__pycache__/RFE.cpython-311.pyc
 H_learning/__pycache__/RFE.cpython-312.pyc
+H_learning/__pycache__/least_square.cpython-311.pyc
