two qubit least square works!

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ plot.pdf
 H_learning/__pycache__/RFE.cpython-311.pyc
 H_learning/__pycache__/RFE.cpython-312.pyc
 H_learning/__pycache__/least_square.cpython-311.pyc
+H_learning/__pycache__/RFE_2_qubits.cpython-312.pyc
