--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ H_learning/__pycache__/RFE.cpython-311.pyc
 H_learning/__pycache__/RFE.cpython-312.pyc
 H_learning/__pycache__/least_square.cpython-311.pyc
 H_learning/__pycache__/RFE_2_qubits.cpython-312.pyc
+H_learning/__pycache__/RFE_2_qubits.cpython-311.pyc
