--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ H_learning/__pycache__/RFE.cpython-312.pyc
 H_learning/__pycache__/least_square.cpython-311.pyc
 H_learning/__pycache__/RFE_2_qubits.cpython-312.pyc
 H_learning/__pycache__/RFE_2_qubits.cpython-311.pyc
+H_learning/2_qubit_plots/__pycache__/RFE.cpython-311.pyc
+H_learning/2_qubit_plots/__pycache__/RFE_2_qubits.cpython-311.pyc
